@@ -10,7 +10,6 @@ import io.fabric8.kubernetes.api.model.ConfigMapBuilder;
 import io.fabric8.kubernetes.api.model.ConfigMapVolumeSource;
 import io.fabric8.kubernetes.api.model.ConfigMapVolumeSourceBuilder;
 import io.fabric8.kubernetes.api.model.Container;
-import io.fabric8.kubernetes.api.model.ContainerBuilder;
 import io.fabric8.kubernetes.api.model.ContainerPort;
 import io.fabric8.kubernetes.api.model.ContainerPortBuilder;
 import io.fabric8.kubernetes.api.model.EnvVar;
@@ -20,6 +19,7 @@ import io.fabric8.kubernetes.api.model.EnvVarSourceBuilder;
 import io.fabric8.kubernetes.api.model.HasMetadata;
 import io.fabric8.kubernetes.api.model.LabelSelector;
 import io.fabric8.kubernetes.api.model.LabelSelectorBuilder;
+import io.fabric8.kubernetes.api.model.LocalObjectReference;
 import io.fabric8.kubernetes.api.model.OwnerReference;
 import io.fabric8.kubernetes.api.model.OwnerReferenceBuilder;
 import io.fabric8.kubernetes.api.model.PersistentVolumeClaim;
@@ -29,10 +29,7 @@ import io.fabric8.kubernetes.api.model.PodSecurityContextBuilder;
 import io.fabric8.kubernetes.api.model.Probe;
 import io.fabric8.kubernetes.api.model.ProbeBuilder;
 import io.fabric8.kubernetes.api.model.Quantity;
-import io.fabric8.kubernetes.api.model.ResourceRequirements;
-import io.fabric8.kubernetes.api.model.ResourceRequirementsBuilder;
 import io.fabric8.kubernetes.api.model.Secret;
-import io.fabric8.kubernetes.api.model.SecretBuilder;
 import io.fabric8.kubernetes.api.model.SecretVolumeSource;
 import io.fabric8.kubernetes.api.model.SecretVolumeSourceBuilder;
 import io.fabric8.kubernetes.api.model.Service;
@@ -44,12 +41,14 @@ import io.fabric8.kubernetes.api.model.Volume;
 import io.fabric8.kubernetes.api.model.VolumeBuilder;
 import io.fabric8.kubernetes.api.model.VolumeMount;
 import io.fabric8.kubernetes.api.model.VolumeMountBuilder;
-import io.fabric8.kubernetes.api.model.extensions.Deployment;
-import io.fabric8.kubernetes.api.model.extensions.DeploymentBuilder;
-import io.fabric8.kubernetes.api.model.extensions.DeploymentStrategy;
-import io.fabric8.kubernetes.api.model.extensions.StatefulSet;
-import io.fabric8.kubernetes.api.model.extensions.StatefulSetBuilder;
-import io.fabric8.kubernetes.api.model.extensions.StatefulSetUpdateStrategyBuilder;
+import io.fabric8.kubernetes.api.model.apps.Deployment;
+import io.fabric8.kubernetes.api.model.apps.DeploymentBuilder;
+import io.fabric8.kubernetes.api.model.apps.DeploymentStrategy;
+import io.fabric8.kubernetes.api.model.apps.StatefulSet;
+import io.fabric8.kubernetes.api.model.apps.StatefulSetBuilder;
+import io.fabric8.kubernetes.api.model.apps.StatefulSetUpdateStrategyBuilder;
+import io.fabric8.kubernetes.api.model.policy.PodDisruptionBudget;
+import io.fabric8.kubernetes.api.model.policy.PodDisruptionBudgetBuilder;
 import io.strimzi.api.kafka.model.CpuMemory;
 import io.strimzi.api.kafka.model.ExternalLogging;
 import io.strimzi.api.kafka.model.InlineLogging;
@@ -59,7 +58,7 @@ import io.strimzi.api.kafka.model.Logging;
 import io.strimzi.api.kafka.model.PersistentClaimStorage;
 import io.strimzi.api.kafka.model.Resources;
 import io.strimzi.api.kafka.model.Storage;
-import io.strimzi.operator.cluster.ClusterOperator;
+import io.strimzi.operator.common.Annotations;
 import io.strimzi.operator.common.model.Labels;
 import io.vertx.core.json.JsonObject;
 import org.apache.logging.log4j.LogManager;
@@ -68,7 +67,6 @@ import org.apache.logging.log4j.Logger;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.StringWriter;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
@@ -78,8 +76,6 @@ import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
-import static io.strimzi.api.kafka.model.Quantities.normalizeCpu;
-import static io.strimzi.api.kafka.model.Quantities.normalizeMemory;
 import static java.util.Arrays.asList;
 
 public abstract class AbstractModel {
@@ -89,10 +85,7 @@ public abstract class AbstractModel {
     protected static final int CERTS_EXPIRATION_DAYS = 365;
     protected static final String DEFAULT_JVM_XMS = "128M";
 
-    private static final String VOLUME_MOUNT_HACK_IMAGE = "busybox";
-    protected static final String VOLUME_MOUNT_HACK_NAME = "volume-mount-hack";
-    private static final Long VOLUME_MOUNT_HACK_USERID = 1001L;
-    private static final Long VOLUME_MOUNT_HACK_GROUPID = 0L;
+    private static final Long DEFAULT_FS_GROUPID = 0L;
 
     public static final String ANCILLARY_CM_KEY_METRICS = "metrics-config.yml";
     public static final String ANCILLARY_CM_KEY_LOG_CONFIG = "log4j.properties";
@@ -101,9 +94,15 @@ public abstract class AbstractModel {
     public static final String ENV_VAR_KAFKA_JVM_PERFORMANCE_OPTS = "KAFKA_JVM_PERFORMANCE_OPTS";
     public static final String ENV_VAR_DYNAMIC_HEAP_MAX = "DYNAMIC_HEAP_MAX";
     public static final String NETWORK_POLICY_KEY_SUFFIX = "-network-policy";
+    public static final String ENV_VAR_STRIMZI_KAFKA_GC_LOG_OPTS = "STRIMZI_KAFKA_GC_LOG_OPTS";
+    public static final String ENV_VAR_STRIMZI_GC_LOG_OPTS = "STRIMZI_GC_LOG_OPTS";
 
-    private static final String DELETE_CLAIM_ANNOTATION =
-            ClusterOperator.STRIMZI_CLUSTER_OPERATOR_DOMAIN + "/delete-claim";
+    private static final String ANNO_STRIMZI_IO_DELETE_CLAIM = Annotations.STRIMZI_DOMAIN + "/delete-claim";
+    @Deprecated
+    private static final String ANNO_CO_STRIMZI_IO_DELETE_CLAIM = "cluster.operator.strimzi.io/delete-claim";
+
+    protected static final String DEFAULT_KAFKA_GC_LOGGING = "-verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps";
+    protected static final String DEFAULT_STRIMZI_GC_LOGGING = "-XX:NativeMemoryTracking=summary -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps";
 
     protected final String cluster;
     protected final String namespace;
@@ -133,6 +132,7 @@ public abstract class AbstractModel {
     protected String ancillaryConfigName;
     protected String logConfigName;
 
+
     protected Storage storage;
 
     protected AbstractConfiguration configuration;
@@ -149,8 +149,9 @@ public abstract class AbstractModel {
     private List<Toleration> tolerations;
 
     protected Map validLoggerFields;
-    private String[] validLoggerValues = new String[]{"INFO", "ERROR", "WARN", "TRACE", "DEBUG", "FATAL", "OFF" };
+    private final String[] validLoggerValues = new String[]{"INFO", "ERROR", "WARN", "TRACE", "DEBUG", "FATAL", "OFF" };
     private Logging logging;
+    protected boolean gcLoggingEnabled = true;
 
     // Templates
     protected Map<String, String> templateStatefulSetLabels;
@@ -163,6 +164,12 @@ public abstract class AbstractModel {
     protected Map<String, String> templateServiceAnnotations;
     protected Map<String, String> templateHeadlessServiceLabels;
     protected Map<String, String> templateHeadlessServiceAnnotations;
+    protected List<LocalObjectReference> templateImagePullSecrets;
+    protected PodSecurityContext templateSecurityContext;
+    protected int templateTerminationGracePeriodSeconds = 30;
+    protected Map<String, String> templatePodDisruptionBudgetLabels;
+    protected Map<String, String> templatePodDisruptionBudgetAnnotations;
+    protected int templatePodDisruptionBudgetMaxUnavailable = 1;
 
     // Owner Reference information
     private String ownerApiVersion;
@@ -189,7 +196,7 @@ public abstract class AbstractModel {
         return replicas;
     }
 
-    protected void setReplicas(int replicas) {
+    public void setReplicas(int replicas) {
         this.replicas = replicas;
     }
 
@@ -258,6 +265,14 @@ public abstract class AbstractModel {
 
     protected void setMetricsEnabled(boolean isMetricsEnabled) {
         this.isMetricsEnabled = isMetricsEnabled;
+    }
+
+    public String getGcLoggingOptions() {
+        return gcLoggingEnabled ? DEFAULT_KAFKA_GC_LOGGING : " ";
+    }
+
+    protected void setGcLoggingEnabled(boolean gcLoggingEnabled) {
+        this.gcLoggingEnabled = gcLoggingEnabled;
     }
 
 
@@ -667,29 +682,7 @@ public abstract class AbstractModel {
     }
 
     protected Secret createSecret(String name, Map<String, String> data) {
-
-        Secret s = new SecretBuilder()
-                .withNewMetadata()
-                    .withName(name)
-                    .withNamespace(namespace)
-                    .withLabels(labels.toMap())
-                    .withOwnerReferences(createOwnerReference())
-                .endMetadata()
-                .withData(data)
-                .build();
-
-        return s;
-    }
-
-    protected Probe createExecProbe(String command, int initialDelay, int timeout) {
-        Probe probe = new ProbeBuilder().withNewExec()
-                .withCommand(command)
-                .endExec()
-                .withInitialDelaySeconds(initialDelay)
-                .withTimeoutSeconds(timeout)
-                .build();
-        log.trace("Created exec probe {}", probe);
-        return probe;
+        return ModelUtils.createSecret(name, namespace, labels, createOwnerReference(), data);
     }
 
     protected Probe createTcpSocketProbe(int port, int initialDelay, int timeout) {
@@ -762,43 +755,28 @@ public abstract class AbstractModel {
     }
 
     protected StatefulSet createStatefulSet(
+            Map<String, String> annotations,
             List<Volume> volumes,
             List<PersistentVolumeClaim> volumeClaims,
-            List<VolumeMount> volumeMounts,
             Affinity affinity,
             List<Container> initContainers,
             List<Container> containers,
             boolean isOpenShift) {
 
-        Map<String, String> annotations = new HashMap<>();
+        annotations = new HashMap<>(annotations);
 
-        annotations.put(DELETE_CLAIM_ANNOTATION,
+        annotations.put(ANNO_STRIMZI_IO_DELETE_CLAIM,
                 String.valueOf(storage instanceof PersistentClaimStorage
                         && ((PersistentClaimStorage) storage).isDeleteClaim()));
 
-        List<Container> initContainersInternal = new ArrayList<>();
-        PodSecurityContext securityContext = null;
-        // if a persistent volume claim is requested and the running cluster is a Kubernetes one
-        // there is an hack on volume mounting which needs an "init-container"
-        if (this.storage instanceof PersistentClaimStorage && !isOpenShift) {
-            String chown = String.format("chown -R %d:%d %s",
-                    AbstractModel.VOLUME_MOUNT_HACK_USERID,
-                    AbstractModel.VOLUME_MOUNT_HACK_GROUPID,
-                    volumeMounts.get(0).getMountPath());
-            Container initContainer = new ContainerBuilder()
-                    .withName(AbstractModel.VOLUME_MOUNT_HACK_NAME)
-                    .withImage(AbstractModel.VOLUME_MOUNT_HACK_IMAGE)
-                    .withVolumeMounts(volumeMounts.get(0))
-                    .withCommand("sh", "-c", chown)
-                    .build();
-            initContainersInternal.add(initContainer);
+        PodSecurityContext securityContext = templateSecurityContext;
+
+        // if a persistent volume claim is requested and the running cluster is a Kubernetes one and we have no user configured PodSecurityContext
+        // we set the security context
+        if (this.storage instanceof PersistentClaimStorage && !isOpenShift && securityContext == null) {
             securityContext = new PodSecurityContextBuilder()
-                    .withFsGroup(AbstractModel.VOLUME_MOUNT_HACK_GROUPID)
+                    .withFsGroup(AbstractModel.DEFAULT_FS_GROUPID)
                     .build();
-        }
-        // add all the other init containers provided by the specific model implementation
-        if (initContainers != null) {
-            initContainersInternal.addAll(initContainers);
         }
 
         StatefulSet statefulSet = new StatefulSetBuilder()
@@ -824,11 +802,13 @@ public abstract class AbstractModel {
                         .withNewSpec()
                             .withServiceAccountName(getServiceAccountName())
                             .withAffinity(affinity)
-                            .withSecurityContext(securityContext)
-                            .withInitContainers(initContainersInternal)
+                            .withInitContainers(initContainers)
                             .withContainers(containers)
                             .withVolumes(volumes)
                             .withTolerations(getTolerations())
+                            .withTerminationGracePeriodSeconds(Long.valueOf(templateTerminationGracePeriodSeconds))
+                            .withImagePullSecrets(templateImagePullSecrets)
+                            .withSecurityContext(securityContext)
                         .endSpec()
                     .endTemplate()
                     .withVolumeClaimTemplates(volumeClaims)
@@ -871,6 +851,9 @@ public abstract class AbstractModel {
                             .withContainers(containers)
                             .withVolumes(volumes)
                             .withTolerations(getTolerations())
+                            .withTerminationGracePeriodSeconds(Long.valueOf(templateTerminationGracePeriodSeconds))
+                            .withImagePullSecrets(templateImagePullSecrets)
+                            .withSecurityContext(templateSecurityContext)
                         .endSpec()
                     .endTemplate()
                 .endSpec()
@@ -917,32 +900,6 @@ public abstract class AbstractModel {
             Collectors.toMap(EnvVar::getName, EnvVar::getValue,
                 // On duplicates, last in wins
                 (u, v) -> v));
-    }
-
-    public static ResourceRequirements resources(Resources resources) {
-        if (resources != null) {
-            ResourceRequirementsBuilder builder = new ResourceRequirementsBuilder();
-            CpuMemory limits = resources.getLimits();
-            if (limits != null
-                    && limits.milliCpuAsInt() > 0) {
-                builder.addToLimits("cpu", new Quantity(normalizeCpu(limits.getMilliCpu())));
-            }
-            if (limits != null
-                    && limits.memoryAsLong() > 0) {
-                builder.addToLimits("memory", new Quantity(normalizeMemory(limits.getMemory())));
-            }
-            CpuMemory requests = resources.getRequests();
-            if (requests != null
-                    && requests.milliCpuAsInt() > 0) {
-                builder.addToRequests("cpu", new Quantity(normalizeCpu(requests.getMilliCpu())));
-            }
-            if (requests != null
-                    && requests.memoryAsLong() > 0) {
-                builder.addToRequests("memory", new Quantity(normalizeMemory(requests.getMemory())));
-            }
-            return builder.build();
-        }
-        return null;
     }
 
     public void setResources(Resources resources) {
@@ -1060,9 +1017,9 @@ public abstract class AbstractModel {
     }
 
     public static boolean deleteClaim(StatefulSet ss) {
-        if (!ss.getSpec().getVolumeClaimTemplates().isEmpty()
-                && ss.getMetadata().getAnnotations() != null) {
-            return Boolean.valueOf(ss.getMetadata().getAnnotations().computeIfAbsent(DELETE_CLAIM_ANNOTATION, s -> "false"));
+        if (!ss.getSpec().getVolumeClaimTemplates().isEmpty()) {
+            return Annotations.booleanAnnotation(ss, ANNO_STRIMZI_IO_DELETE_CLAIM,
+                    false, ANNO_CO_STRIMZI_IO_DELETE_CLAIM);
         } else {
             return false;
         }
@@ -1080,6 +1037,27 @@ public abstract class AbstractModel {
         annotations.put("prometheus.io/path", "/metrics");
 
         return annotations;
+    }
+
+    /**
+     * Creates the PodDisruptionBudget
+     *
+     * @return
+     */
+    protected PodDisruptionBudget createPodDisruptionBudget()   {
+        return new PodDisruptionBudgetBuilder()
+                .withNewMetadata()
+                    .withName(name)
+                    .withLabels(getLabelsWithName(templatePodDisruptionBudgetLabels))
+                    .withNamespace(namespace)
+                    .withAnnotations(templatePodDisruptionBudgetAnnotations)
+                    .withOwnerReferences(createOwnerReference())
+                .endMetadata()
+                .withNewSpec()
+                    .withNewMaxUnavailable(templatePodDisruptionBudgetMaxUnavailable)
+                    .withSelector(new LabelSelectorBuilder().withMatchLabels(getSelectorLabels()).build())
+                .endSpec()
+                .build();
     }
 
     String getAncillaryConfigMapKeyLogConfig() {
